<resources>
    <string name="app_name">WSapp</string>
    <string name="Heading">WELCOME</string>
    <string name="display2">Welcome</string>
    <string name="heading">WELCOME TO WS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="si">Sign In</string>
    <string name="su">Sign Up</string>
    <string name="txt">SignUp/SignIn</string>
    <string name="button">Sign Up</string>
    <string name="buttonn">Sign In</string>
    <string name="contentdescription">imgggg</string>
    <string name="create">Create an</string>
    <string name="createacc">Create Account</string>
    <string name="log">Sign In</string>
    <string name="id">Email</string>
    <string name="pswd">Password</string>
    <string name="lin">Log In</string>
    <string name="title_activity_g">g</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_homepg">homepg</string>
    <string name="nme">Name</string>
    <string name="ph">Phone No.</string>
    <string name="emal">Email</string>
    <string name="bttnnnn">Sign Up</string>
    <string name="quote">\"You are Strong\"</string>
    <string name="emergency">Emergency Helplines</string>
    <string name="hlp1">Police - 112</string>
    <string name="hlp2">Ambulance - 108</string>
    <string name="hlp3">Women Safety - 181</string>
    <string name="contact">ADD Contacts</string>
    <string name="msg">Message</string>
    <string name="emrgncy">EMERGENCY</string>
    <string name="cntcs">Contacts</string>
    <string name="msgg">Message</string>
</resources>