<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signing" >

    <TextView
        android:id="@+id/txt4"
        android:layout_width="309dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:text="@string/txt"
        android:textColor="#9C27B0"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="316dp"
        android:layout_height="63dp"
        android:layout_marginTop="180dp"
        android:onClick="signup"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/button6"
        android:layout_width="316dp"
        android:layout_height="64dp"
        android:onClick="signin"
        android:text="@string/buttonn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.248" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="143dp"
        android:layout_height="149dp"
        android:contentDescription="@string/contentdescription"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4"
        app:srcCompat="@drawable/wssss" />

</androidx.constraintlayout.widget.ConstraintLayout>